# rs-aabb

./: Cargo.toml
src/: agnostic_math.rs  lib.rs  tests.rs
