[package]
name = "aabb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32", features = ["serde-serialize"] }
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
